--- a/CSS/Uygulamalar/9 box-model/box-model.css
+++ b/CSS/Uygulamalar/9 box-model/box-model.css
@@ -2,6 +2,10 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: 'Caveat', cursive;
+    font-size: 22px;
+    letter-spacing: 2px;
+    line-height: 35px;
 }
 
 body {
@@ -10,6 +14,7 @@ body {
 
 h2 {
     margin-bottom: 10px;
+    font-size: 150%;
 }
 
 #container {
@@ -18,19 +23,35 @@ h2 {
 }
 
 #blog-post-container {
-    width: 75%;
+    width: 70%;
     float: left;
 }
 
 #other-posts {
-    width: 25%;
+    width: 30%;
     float: left;
     padding-left: 10px;
 }
 
 #inner-other-posts {
-    position: fixed;
-    top: 20px;
+    position: relative;
+}
+
+#share {
+    position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+}
+
+#share a {
+    color: gray;
+    text-decoration: none;
+    opacity: 0.9;
+}
+
+#share a:hover {
+    opacity: 0.6;
 }
 
 #author-box {
@@ -53,6 +74,7 @@ h2 {
     background-color: white;
     margin-bottom: 15;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .blog-post {
@@ -65,8 +87,9 @@ h2 {
 
 .date {
     position: absolute;
-    top: 15px;
-    right: 50px;
+    top: 20px;
+    right: 20px;
+    color: #aaa;
 }
 
 .blog-text {
