--- a/CSS/Uygulamalar/11 box-shadow/box-shadow.css
+++ b/CSS/Uygulamalar/11 box-shadow/box-shadow.css
@@ -14,36 +14,42 @@ body {
 .card-1 {
     -webkit-box-shadow: 20px 20px;
     -moz-box-shadow: 20px 20px;
+    box-shadow: 20px 20px;
     /*gölgelendirme*/
 }
 
 .card-2 {
     -webkit-box-shadow: 20px 20px 20px;
     -moz-box-shadow: 20px 20px 20px;
+    box-shadow: 20px 20px 20px;
     /*gölgeye blur verme*/
 }
 
 .card-3 {
     -webkit-box-shadow: 20px 20px 20px 10px;
     -moz-box-shadow: 20px 20px 20px 10px;
+    box-shadow: 20px 20px 20px 10px;
     /*gölge blur büyüklüğü*/
 }
 
 .card-4 {
     -webkit-box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.3);
     /*gölge şeffaflaştırma & renklendirme*/
 }
 
 .card-5 {
     -webkit-box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.3) inset;
     -moz-box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.3) inset;
     /*gölgelendirmeyi kutunun içine verme*/
 }
 
 .card-6 {
     -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.16);
     -moz-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.16);
     /*kutuya belirginlik kazandırma*/
 }
 
@@ -51,5 +57,6 @@ body {
     border: 1px solid #bfbfbf;
     -webkit-box-shadow: 10px 10px 5px #aaaaaa;
     -moz-box-shadow: 10px 10px 5px #aaaaaa;
+    box-shadow: 10px 10px 5px #aaaaaa;
     /*kutuyu belirginleştirirken border kullanmak oldukça etkilidir*/
 }
